--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-# Welcome to Jekyll!
-#
 # This config file is meant for settings that affect your whole blog, values
 # which you are expected to set up once and rarely edit after that. If you find
 # yourself editing this file very often, consider using Jekyll's data files
@@ -13,16 +11,23 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+doing: What I'm doing :)
+title: a space for Rumination x Adventure
+status1: ambitiously interning at Cloudflare in Austin, TX
+status2: excitedly building an app with a lit team 
+status3: slowly figuring out how to make this site attractive
+email: 
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I’ve put off this blog for years. 
+  When posting publicly, I feel a pressure to make thing sound “good”, 
+  which means unnecessary stress to research things properly and edit my words several times. 
+  But I’m often reminded that we’re not perfect; it’s a lesson that isn’t quick to sink in. 
+  We’re all trying to figure life out, and I’m trying to embrace that by 
+  finally just doing what I’ve been wanting to do: 
+  practice processing my thoughts through written words, unfiltered.  
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+#twitter_username: 
 
 # Build settings
 markdown: kramdown
