--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,6 @@
 # which you are expected to set up once and rarely edit after that. If you find
 # yourself editing this file very often, consider using Jekyll's data files
 # feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
@@ -13,16 +10,16 @@
 # in the templates via {{ site.myvariable }}.
 doing: What I'm doing :)
 title: a space for Rumination x Adventure
-status1: ambitiously interning at Cloudflare in Austin, TX
-status2: excitedly building an app with a lit team 
-status3: slowly figuring out how to make this site attractive
+status1: interning at Cloudflare in Austin, TX
+status2: building an app with a lit team 
+status3: figuring out how to make this site attractive
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
-  I’ve put off this blog for years. 
-  When posting publicly, I feel a pressure to make thing sound “good”, 
-  which means unnecessary stress to research things properly and edit my words several times. 
-  But I’m often reminded that we’re not perfect; it’s a lesson that isn’t quick to sink in. 
-  We’re all trying to figure life out, and I’m trying to embrace that by 
+  I’ve put off writing this blog for years. 
+  Because I've been stressing over making myself sound like I know my stuff.
+  But I'm not perfect.
+  I'm trialing through life, just as everybody else is. 
+  And I’m trying to embrace this by 
   finally just doing what I’ve been wanting to do: 
   practice processing my thoughts through written words, unfiltered.  
 baseurl: "" # the subpath of your site, e.g. /blog
