--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-doing: What I'm doing :)
+doing: What I'm up to :)
 title: a space for Rumination x Adventure
 status1: interning at Cloudflare in Austin, TX
 status2: building an app with a lit team 
-status3: figuring out how to make this site attractive
+status3: making this site attractive
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
   I’ve put off writing this blog for years. 
