--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ title: a space for Rumination x Adventure
 status1: interning at Cloudflare in Austin, TX
 status2: building an app with a lit team 
 status3: making this site attractive
+status4: adoringly pestering my fam + friends
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
   I’ve put off writing this blog for years. 
