--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@
 # in the templates via {{ site.myvariable }}.
 doing: What I'm up to :)
 title: a space for Rumination x Adventure
-status1: interning at Cloudflare in Austin, TX
-status2: building an app with a lit team 
-status3: making this site attractive
+status1: interning at Cloudflare in Austin, TX;
+status2: building an app with a lit team; 
+status3: making this site attractive;
 status4: adoringly pestering my fam + friends
-email: 
+email: fang.j.sra@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   I’ve put off writing this blog for years. 
   Because I've been stressing over making myself sound like I know my stuff.
