--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 # in the templates via {{ site.myvariable }}.
 doing: What I'm up to :)
 title: a space for Rumination x Adventure
-status1: interning at Cloudflare in Austin, TX;
-status2: building an app with a lit team; 
-status3: making this site attractive;
-status4: adoringly pestering my fam + friends
+status1: living it up at WashU \#senioryear
+status2: building an app with a lit team 
+status3: adoringly pestering my friends + fam
+# status4: adoringly pestering my fam + friends
 email: fang.j.sra@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   I’ve put off writing this blog for years. 
@@ -22,7 +22,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   I'm trialing through life, just as everybody else is. 
   And I’m trying to embrace this by 
   finally just doing what I’ve been wanting to do: 
-  practice processing my thoughts through written words, unfiltered.  
+  processing and sharing my thoughts through written words, unfiltered.  
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: 
